2011-07-06  Ingo Renner  <ingo.renner@dkd.de>

	* Added support for Record Access Rootline Elements
	* Fixed an issue where empty facets were not detected correctly when using option showEmptyFacets
	* Added new marker ###FACET_LINK.FACET_NAME###
	* Fixed usage of extension key in DevLog calls
	* Moved method getSearch() from tx_solr_pi_results to tx_solr_pluginbase_PluginBase

2011-06-11  Ingo Renner  <ingo.renner@dkd.de>

	* Fixed issue #27101: Error 500 at default installation via shell script, unable to load typo3-accessfilter

2011-05-24  Ingo Renner  <ingo.renner@dkd.de>

	* Fixed issue #26807: Bug in try/catch in reports module
	* Fixed issue #25723: Missing proper escaping in scheduler tasks, credits Georg Ringer

2011-05-17  Ingo Renner  <ingo.renner@dkd.de>

	* Fixed suggest queries, which were broken due to the removal of q.alt in solrconfig.xml
	* Added methods setAlternativeQuery() and getAlternativeQuery() to tx_solr_Query

2011-05-16  Ingo Renner  <ingo.renner@dkd.de>

	* Updated install-solr.sh to use the current tomcat version and Solr plugin install directory
	* Added Solr multicore configuration

2011-04-12  Ingo Renner  <ingo.renner@dkd.de>

	* Cleaned up solrconfig.xml, removed unnecessary example configuration, enabled php and phpcs response writers, data import handler

2011-04-06  Ingo Renner  <ingo.renner@dkd.de>

	* Updated schema.xml and solrconfig.xml to match the EAP version

2011-02-28  Ingo Renner  <ingo.renner@dkd.de>

	* Fixed an issue which resulted in sorting not working anymore

2011-02-22  Ingo Renner  <ingo.renner@dkd.de>

	* Changed version number to 1.4.0-dev

2011-02-22  Ingo Renner  <ingo.renner@dkd.de>

	* Release of v1.3.0

	* Added tx_solr_AdditionalFieldsIndexer to take care of indexing fields as defined in plugin.tx_solr.index.additionalFields
	* Removed unused method tx_solr_Typo3Environment::isFileadminEnabledWhileUsingDam()
	* Added refactored indexer
	* Added utility method tx_solr_Util::getRootPageId()